--- a/how_to.html
+++ b/how_to.html
@@ -67,7 +67,7 @@
             <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">How do I schedule a repeating event with Cyclone? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Events can be repeated on any Calendar for which you have edit privledges.
+                Events can be repeated on any Calendar for which you have edit privileges.
                 Repeating events will populate in the Calendar which contains the selected event.<br><br>
                 <ol>
                   <li> <span class="how_to_step">Open Cyclone by using the Google Calendar Toolbar to click on the Cyclone icon.</span><br>
@@ -88,7 +88,7 @@
                   </li>
                   <li><span class="how_to_step">Select the last day the event should repeat.</span><br>
                     <img src="assets/img/HowTo/Add_6.png" width="50%"/> <br>
-                      Repeating events can only be scheduled within the timeframe specified by your selected schedule. 
+                      Repeating events can only be scheduled within the date range specified by your selected schedule. 
                   </li>
                   <li><span class="how_to_step">Click "Repeat Event".</span><br>
                     <img src="assets/img/HowTo/Add_7.png" width="50%"/> <br>
@@ -134,12 +134,12 @@
               <p>
                 Some schedules have rotating periods. For instance, your schedule may have a 6th period that meets in the afternoon on Mondays, Tuesdays, and Thursdays, but
                 rotates to meet in the morning on Wednesdays and Fridays to accommodate student early dismissals for Athletics. <br><br>
-                Cyclone will prompt you for your intentions if you attempt to repeat an event that overlaps with either the morning or afternoon ocurrence of such a rotation.<br><br>
+                Cyclone will prompt you for your intentions if you attempt to repeat an event that overlaps with either the morning or afternoon occurrence of such a rotation.<br><br>
                 <ol>
                   <li><span class="how_to_step">Open Cyclone, then click on an event to repeat.</span><br>
                       <img src="assets/img/HowTo/Rotate_1.png" width="50%"/><br>
                  </li>
-                 <li><span class="how_to_step">If the event overlaps with a rotating period extra propmpts appear to specify how to handle rotating period times.</span><br>
+                 <li><span class="how_to_step">If the event overlaps with a rotating period extra prompts appear to specify how to handle rotating period times.</span><br>
                   <img src="assets/img/HowTo/Rotate_2.png" width="50%"/><br>
                   Cyclone will offer a prompt on either side of the rotating period:<br>
                   <img src="assets/img/HowTo/Rotate_6.png" width="50%"/> <br>
