--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-right">
             <div class="content">
-              <h3>Operating on a 6, 7, or 10 day calendar cycle can offer many benefits. Calendar managment isn’t one of them. </h3>
+              <h3>Operating on a 6, 7, or 10 day calendar cycle can offer many benefits. Calendar management isn’t one of them. </h3>
               <p>
                 Google Calendar is designed to help you manage events that repeat on a Monday - Friday schedule. If you're working with different rules for recurring events, scheduling meetings with Google Calendar can be a nightmare.             
             </div>
@@ -86,7 +86,7 @@
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                   <i class="bx bx-cube-alt"></i>
                   <h4>Juggling Multiple Calendars</h4>
-                  <p>Administrative assistants and other calendar-inensive roles can have a lot of trouble scheduling recurring meetings for multiple people.</p>
+                  <p>Administrative assistants and other calendar-intensive roles can have a lot of trouble scheduling recurring meetings for multiple people.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
                   <i class="bx bx-images"></i>
@@ -126,7 +126,7 @@
             </p>
             <ul>
               <li><i class="bi bi-check"></i> <b>Cyclone Lives in Google Calendar.</b> A simple interface is accessible from the Google Calendar sidebar. No uploading .ics files, and no scheduling of dozens of individual events.</li>
-              <li><i class="bi bi-check"></i> <b>One-click option for adding and deleting recurring events.</b> A single button creates repeating events through a specified timeframe.  Deleting connected recurring events is just as easy.</li>
+              <li><i class="bi bi-check"></i> <b>One-click option for adding and deleting recurring events.</b> A single button creates repeating events through a specified date range.  Deleting connected recurring events is just as easy.</li>
               <li><i class="bi bi-check"></i> <b>Schedule recurring events for other people.</b> Users can add/delete recurring cycle-based events for any Calendar with edit privileges.</li>
               <li><i class="bi bi-check"></i> <b>No holiday scheduling.</b> Recurring events can be scheduled to repeat every cycle, every other cycle, or on a Mon-Fri schedule that skips holidays or other days with special schedules.</li>
             </ul>
@@ -140,7 +140,7 @@
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
             <h3>Convenient Planning with Almanac (Coming Soon)</h3>
             <p class="fst-italic">
-              View nuanced meeting statistics and genrate printable, customizable planners to help everyone understand their schedule.
+              View nuanced meeting statistics and generate printable, customizable planners to help everyone understand their schedule.
             </p>
             <ul>
               <li><i class="bi bi-check"></i> <b>Helpful planning analytics.</b> Precalculated statistics like total meeting time, total number of meetings, and sequential event numbering. </li>
@@ -176,7 +176,7 @@
 
         <div class="section-title">
           <h2>TailoredEdTech</h2>
-          <p>Cyclone is a TailorededTech solution for making it easier to manage bespoke, cycle-based schedules in Google Calendar. If you think we can make Cyclone work better for your organization, let us know! We'd also love to hear about any of your other Google Workspace-related problems. Let us know how we can help!</p>
+          <p>Cyclone is a TailoredEdTech solution for making it easier to manage bespoke, cycle-based schedules in Google Calendar. If you think we can make Cyclone or Google Workspace work better for your organization, let us know how we can help!</p>
         </div>
 
         <div class="row">
