--- a/how_to.html
+++ b/how_to.html
@@ -132,9 +132,9 @@
             <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">How do I make sure my recurring event moves with a rotating period? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Some schedules have rotating periods. For instance, your schedule may have a 6th period that meets in the afternoon on Mondays, Tuesdays, and Thursdays, but
-                rotates to meet in the morning on Wednesdays and Fridays to accommodate student early dismissals for Athletics. <br><br>
-                Cyclone will prompt you for your intentions if you attempt to repeat an event that overlaps with either the morning or afternoon occurrence of such a rotation.<br><br>
+                Some schedules have rotating or cascading period timings. For instance, a 6th period class can meet in the afternoon on Mondays, Tuesdays, and Thursdays, but
+                rotate to meet in the morning on Wednesdays and Fridays in order to accommodate student early dismissals for Athletics. <br><br>
+                Cyclone accommodates rotating periods by prompting you to indicate whether you'd like a repeating event to follow the rotation.<br><br>
                 <ol>
                   <li><span class="how_to_step">Open Cyclone, then click on an event to repeat.</span><br>
                       <img src="assets/img/HowTo/Rotate_1.png" width="50%"/><br>
