--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#features">Features</a></li>
-          <li><a class="nav-link scrollto" href="how_to.html">How-To/FAQ</a></li>
+          <li><a class="nav-link scrollto" href="learn.html">Learn</a></li>
           <li><a class="nav-link scrollto" href="#services">TailoredEdTEch</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
@@ -183,16 +183,16 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Automated Forms</a></h4>
-              <p class="description">Move and transform data from Forms to Docs, GMail, or Drive.</p>
+              <h4 class="title"><a href="">Automated Forms, Sheets, and Customized Doc Generation</a></h4>
+              <p class="description">Move and transform data from Forms or Sheets to Docs, GMail, or Drive. Generate customized Docs, Slides, GMail, or .pdf files from Form data, and more!</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Dynamic, Intelligent Sheets</a></h4>
-              <p class="description">Eliminate hours of copy+paste by integrating Sheets with Forms, Docs, Gmail, Slides, or Drive.</p>
+              <h4 class="title"><a href="">Office Hours and Parent Conference Scheduling</a></h4>
+              <p class="description">Quickly generate and schedule available time slots for Dean meetings, office hours, and parent conferences.</p>
             </div>
           </div>
 
@@ -200,15 +200,15 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4 class="title"><a href="">Minimester Scheduling</a></h4>
-              <p class="description">Help automate mimimester course selection and scheduling.</p>
+              <p class="description">Automate Mimimester and Out-of-the-Box course selection and scheduling.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4 class="title"><a href="">Customized Doc Generation</a></h4>
-              <p class="description">Generate customized Docs, Slides, Sheets, GMail, Forms, .pdf, and more!</p>
+              <h4 class="title"><a href="">Precise and Accurate Test Calendars</a></h4>
+              <p class="description">Display student-specific test schedules on a class-by-class basis directly in Google Calendar.</p>
             </div>
           </div>
 
