--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><a class="nav-link scrollto" href="#features">Features</a></li>
           <li><a class="nav-link scrollto" href="learn.html">Learn</a></li>
           <li><a class="nav-link scrollto" href="#services">TailoredEdTEch</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="getstarted scrollto" href="https://forms.gle/rX1hY4g8x4wnPVuz9">Get Started</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -53,11 +53,13 @@
   <section id="hero" class="d-flex align-items-center">
 
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
-      <h1>Manage repeating, cycle-based events in Google Calendar. </h1>
-      <h2>Easily create and delete repeating events according to your organization's cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
-      <img src="assets/img/cyclone_64x64.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
-      <a href="#about" class="btn-get-started scrollto">Get More Information Now</a>
+      
+      <h1><br>Manage repeating, cycle-based events in Google Calendar. </h1>
+      <img src="assets/img/add.gif" width="90%"/>
 
+      <h2>Easily create and delete repeating events according to your organization's cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
+
+      <a href="https://forms.gle/rX1hY4g8x4wnPVuz9" class="btn-get-started scrollto">Get More Information Now</a>
     </div>
 
   </section><!-- End Hero Section-->
@@ -67,9 +69,11 @@
     <!-- --- Problem Section --- -->
     <section id="about" class="about">
       <div class="container">
+
         <div class="row no-gutters">
           <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-right">
             <div class="content">
+
               <h3>Operating on a 6, 7, or 10 day calendar cycle can offer many benefits. Calendar management isn’t one of them. </h3>
               <p>
                 Google Calendar is designed to help you manage events that repeat on a Monday - Friday schedule. If you're working with different rules for recurring events, scheduling meetings with Google Calendar can be a nightmare.             
@@ -177,6 +181,8 @@
         <div class="section-title">
           <h2>TailoredEdTech</h2>
           <p>Cyclone is a TailoredEdTech solution for making it easier to manage bespoke, cycle-based schedules in Google Calendar. If you think we can make Cyclone or Google Workspace work better for your organization, let us know how we can help!</p>
+          <br><a class="contact" href="https://forms.gle/rX1hY4g8x4wnPVuz9">Contact Us!</a><br><br>
+
         </div>
 
         <div class="row">
@@ -211,10 +217,10 @@
               <p class="description">Display student-specific test schedules on a class-by-class basis directly in Google Calendar.</p>
             </div>
           </div>
-
         </div>
 
       </div>
+
     </section><!-- End Services Section -->
 
   </main><!-- End #main -->
