--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
       
-      <h1><br>Manage repeating, cycle-based events in Google Calendar. </h1>
+      <h1><br><br><br>Manage repeating, cycle-based events in Google Calendar. </h1>
       <img src="assets/img/add.gif" width="90%"/>
 
       <h2>Easily create and delete repeating events according to your organization's cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
