--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
   <!-- --- Hero Section --- -->
   <section id="hero" class="d-flex align-items-center">
 
-    <div class="container d-flex flex-column align-items-center justify-content-center" data-aos="fade-up">
+    <div class="container d-flex flex-column align-items-center justify-content-center first">
       
-      <h1><br><br><br>Manage repeating, cycle-based events in Google Calendar. </h1>
+      <h1><br><br><br>Manage repeating, cycle-based events in Google Calendar. 
       <img src="assets/img/add.gif" width="90%"/>
 
       <h2>Easily create and delete repeating events according to your organization's cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
 
-      <a href="https://forms.gle/rX1hY4g8x4wnPVuz9" class="btn-get-started scrollto">Get More Information Now</a>
+      <a href="https://forms.gle/rX1hY4g8x4wnPVuz9" class="btn-get-started scrollto">Get More Information Now</a></h1>
     </div>
 
   </section><!-- End Hero Section-->
@@ -71,7 +71,7 @@
       <div class="container">
 
         <div class="row no-gutters">
-          <div class="content col-xl-5 d-flex align-items-stretch" data-aos="fade-right">
+          <div class="content col-xl-5 d-flex align-items-stretch"  >
             <div class="content">
 
               <h3>Operating on a 6, 7, or 10 day calendar cycle can offer many benefits. Calendar management isn’t one of them. </h3>
