--- a/learn.html
+++ b/learn.html
@@ -56,8 +56,10 @@
       <br> <br> <br> <br> 
       <img src="assets/img/cyclone_64x64.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
       <h2>Cyclone - Learn</h2>
-      Cyclone can repeat events on any Calendar that gives you edit privileges. <br>
-      All settings are preserved for repeating events.
+      <p> 
+        Cyclone can repeat events on any Calendar that gives you edit privileges. <br>
+        All settings are preserved for repeated events.</p>
+
     </div>
     <!-- --- Learn Section --- -->
     <section id="faq" class="faq">
