--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#features">Features</a></li>
           <li><a class="nav-link scrollto" href="learn.html">Learn</a></li>
-          <li><a class="nav-link scrollto" href="#services">TailoredEdTEch</a></li>
-          <li><a class="getstarted scrollto" href="https://forms.gle/rX1hY4g8x4wnPVuz9">Get Started</a></li>
+          <li><a class="nav-link scrollto" href="#services">Tailored EdTEch</a></li>
+          <li><a class="getstarted scrollto" href="https://forms.gle/rX1hY4g8x4wnPVuz9">Get Cyclone</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -54,12 +54,10 @@
 
     <div class="container d-flex flex-column align-items-center justify-content-center first">
       
-      <h1><br><br><br>Manage repeating cycle-based events in Google Calendar. 
+      <h1>Manage repeating cycle-based events in Google Calendar. </h1>
       <img src="assets/img/add.gif" width="90%"/>
 
       <h2>Easily create and delete repeating events according to your organization's cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
-
-      <a href="https://forms.gle/rX1hY4g8x4wnPVuz9" class="btn-get-started scrollto">Get More Information Now</a></h1>
     </div>
 
   </section><!-- End Hero Section-->
