missing icon fix

--- a/index.html
+++ b/index.html
@@ -14,14 +14,10 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Krub:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
 </head>
 
@@ -81,22 +77,18 @@
             <div class="icon-boxes d-flex flex-column justify-content-center">
               <div class="row">
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                  <i class="bx bx-receipt"></i>
                   <h4>Increased Overhead</h4>
                   <p>Individually scheduling repeating events wastes a lot of time that could be better spent on other things. If things change, individually deleting connected events can be an even more time-consuming (and error-prone) task.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-                  <i class="bx bx-cube-alt"></i>
                   <h4>Juggling Multiple Calendars</h4>
                   <p>Administrative assistants and other calendar-intensive roles can have a lot of trouble scheduling recurring meetings for multiple people.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
-                  <i class="bx bx-images"></i>
                   <h4>Muddy Analytics</h4>
                   <p>How many times does each recurring event meet? What's the total time you'll spend in each event? It’s hard to answer even the most basic questions related to repeated events.</p>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
-                  <i class="bx bx-shield"></i>
                   <h4>Ghost Meetings</h4>
                   <p>Naive repetition of recurring events will populate an event on a Google Calendar even when your organization has a holiday. This populates a calendar with "ghost" events that should not have been scheduled in the first place.</p>
                 </div>
