Add space in Tailored EdTech

--- a/learn.html
+++ b/learn.html
@@ -311,7 +311,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>TailoredEdTech</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Tailored EdTech</span></strong>. All Rights Reserved.
         </div>
       
       </div>
