Open side panel instructions

--- a/learn.html
+++ b/learn.html
@@ -68,8 +68,10 @@
             <div id="repeat_every_cycle_day" class="collapse" data-bs-parent=".faq-list">
               <p>
                 <ol>
-                  <li> <span class="how_to_step">Click on the Cyclone icon in the Google Calendar sidebar to open Cyclone.</span><br>
+                  <li> <span class="how_to_step">Click on the Cyclone icon in the Google Calendar side panel to open Cyclone.</span><br>
                     <img src="assets/img/HowTo/Add_1.png" width="50%"/> 
+                    <br>If you don't see the Google Calendar side panel, click on the Show Side Panel tab located on the bottom right of Google Calendar:
+                    <img src="assets/img/HowTo/Add_0.png" width="10%"/> 
                   </li>
                   <li><span class="how_to_step">Click on the event you'd like to repeat every cycle day.</span><br>
                     <img src="assets/img/HowTo/Add_2.png" width="50%"/> 
@@ -107,8 +109,10 @@
             <div id="repeat_every_other_cycle_day" class="collapse" data-bs-parent=".faq-list">
               <p>
                 <ol>
-                  <li> <span class="how_to_step">Click on the Cyclone icon in the Google Calendar sidebar to open Cyclone.</span><br>
-                    <img src="assets/img/HowTo/EO_1.png" width="50%"/> 
+                  <li> <span class="how_to_step">Click on the Cyclone icon in the Google Calendar side panel to open Cyclone.</span><br>
+                    <img src="assets/img/HowTo/EO_1.png" width="50%"/>
+                    <br>If you don't see the Google Calendar side panel, click on the Show Side Panel tab located on the bottom right of Google Calendar:
+                    <img src="assets/img/HowTo/Add_0.png" width="10%"/>  
                   </li>
                   <li><span class="how_to_step">Click on the event you'd like to repeat every other cycle day.</span><br>
                     <img src="assets/img/HowTo/EO_2.png" width="50%"/> 
@@ -150,8 +154,10 @@
                   or Faculty Work Days. <br><br>
                   
                   <ol>
-                    <li> <span class="how_to_step">Click on the Cyclone icon in the Google Calendar sidebar to open Cyclone.</span><br>
+                    <li> <span class="how_to_step">Click on the Cyclone icon in the Google Calendar side panel to open Cyclone.</span><br>
                       <img src="assets/img/HowTo/ESD_1.png" width="50%"/> 
+                      <br>If you don't see the Google Calendar side panel, click on the Show Side Panel tab located on the bottom right of Google Calendar:
+                      <img src="assets/img/HowTo/Add_0.png" width="10%"/> 
                     </li>
                     <li><span class="how_to_step">Click on the event you'd like to repeat every non-holiday Monday - Friday.</span><br>
                       <img src="assets/img/HowTo/ESD_2.png" width="50%"/> 
