--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="section-title">
           <h2>Cyclone Features</h2>
-          <p>Cyclone is Workspace Add-on for Google Calendar that makes it easy to schedule and analyze events that repeat outside of a regular Monday - Friday pattern.</p>
+          <p>Cyclone is a Google Workspace Add-on for Google Calendar that makes it easy to schedule and analyze events that repeat outside of a regular Monday - Friday pattern.</p>
         </div>
 
         <div class="row content">
