--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
         <div class="copyright">
           &copy; Copyright <strong><span>Tailored EdTech</span></strong>. All Rights Reserved
         </div>
+        <div class="terms">
+          <a href="https://www.tailorededtech.com/privacy">Privacy Policy</a> | <a href="https://www.tailorededtech.com/terms-of-service">Terms of Service</a>
+        </div>
       
       </div>
     </div>
