updated with support page

--- a/index.html
+++ b/index.html
@@ -225,7 +225,9 @@
           &copy; Copyright <strong><span>Tailored EdTech</span></strong>. All Rights Reserved
         </div>
         <div class="terms">
-          <a href="https://www.tailorededtech.com/privacy">Privacy Policy</a> | <a href="https://www.tailorededtech.com/terms-of-service">Terms of Service</a>
+          <a href="https://www.tailorededtech.com/privacy">Privacy Policy</a> | <a
+            href="https://www.tailorededtech.com/terms-of-service">Terms of Service</a> | <a
+            href="https://www.tailorededtech.com/contact">Contact</a>
         </div>
       
       </div>
