--- a/privacy.html
+++ b/privacy.html
@@ -53,7 +53,7 @@
 
     <div class="section-title">
       <br> <br> <br> <br>
-      Privacy Policy for Cylcone
+      <h2>Privacy Policy for Cylcone</h2>
     </div>
     <section class="terms-section">
       <h2>1. Introduction</h2>
@@ -129,7 +129,8 @@
         </div>
         <div class="terms">
           <a href="https://www.tailorededtech.com/privacy">Privacy Policy</a> | <a
-            href="https://www.tailorededtech.com/terms-of-service">Terms of Service</a>
+            href="https://www.tailorededtech.com/terms-of-service">Terms of Service</a> | <a
+            href="https://www.tailorededtech.com/contact">Contact</a>
         </div>
 
       </div>
