--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -53,7 +53,7 @@
 
     <div class="section-title">
       <br> <br> <br> <br>
-      Terms of Service for Cylcone
+      <h2>Terms of Service for Cylcone</h2>
     </div>
     <section class="terms-section">
       <h2>1. Introduction</h2>
@@ -216,7 +216,8 @@
         </div>
         <div class="terms">
           <a href="https://www.tailorededtech.com/privacy">Privacy Policy</a> | <a
-            href="https://www.tailorededtech.com/terms-of-service">Terms of Service</a>
+            href="https://www.tailorededtech.com/terms-of-service">Terms of Service</a> | <a
+            href="https://www.tailorededtech.com/contact">Contact</a>
         </div>
 
       </div>
