--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Cyclone: Workspace Add-on for Google Calendar</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
+  <meta content="Manage complex repeating events in Google Calendar with Cyclone, a Tailored EdTech add-on. Enjoy one-click scheduling, no holiday conflicts, and planning tools for 6, 7, 10-day cycles and more." name="description">
+  <meta content="Cyclone Google Calendar, Google Workspace add-on, repeating events, recurring events, cycle-based calendar, school scheduling, organizational calendar, 6-day calendar, 7-day calendar, 10-day calendar, no holiday scheduling, calendar planning, Tailored EdTech" name="keywords">
+  
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -26,24 +26,21 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">      <img src="assets/img/cyclone_64x64.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
-        Cyclone</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <h1 class="logo"><a href="index.html">
+          <img src="assets/img/cyclone_64x64.png" class="img-fluid hero-img" alt="Cyclone Google Calendar Add-on Logo" data-aos="zoom-in" data-aos-delay="150">
+          Cyclone
+        </a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#features">Features</a></li>
-          <li><a class="nav-link scrollto" href="learn.html">Learn</a></li>
-          <li><a class="nav-link scrollto" href="#services">Tailored EdTEch</a></li>
+          <li><a class="nav-link scrollto" href="index.html#features">Cyclone Features</a></li>
+          <li><a class="nav-link scrollto" href="learn.html">How to Use Cyclone</a></li>
+          <li><a class="nav-link scrollto" href="about.html">Tailored EdTech Services</a></li>
           <li><a class="getstarted scrollto" href="https://forms.gle/rX1hY4g8x4wnPVuz9">Get Cyclone</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-    </div>
-  </header><!-- End Header -->
+      </nav></div>
+  </header>
 
   <!-- --- Hero Section --- -->
   <section id="hero" class="d-flex align-items-center">
@@ -51,7 +48,7 @@
     <div class="container d-flex flex-column align-items-center justify-content-center first">
       
       <h1>Manage repeating cycle-based events in Google Calendar. </h1>
-      <img src="assets/img/add.gif" width="90%"/>
+      <img src="assets/img/add.gif" width="90%" alt="Easily schedule repeating cycle-based events in Google Calendar"/>
 
       <h2>Easily create and delete repeating events according to your organization's cycle-based calendar patterns with Cyclone, a Workspace Add-on for Google Calendar.</h2>
     </div>
@@ -111,7 +108,7 @@
 
         <div class="row content">
           <div class="col-md-5" data-aos="fade-right" data-aos-delay="100">
-            <img src="assets/img/Scheduling.png" class="img-fluid" alt="">
+            <img src="assets/img/Scheduling.png" class="img-fluid" alt="Easily schedule repeating cycle-based events in Google Calendar">
           </div>
           <div class="col-md-7 pt-4" data-aos="fade-left" data-aos-delay="100">
             <h3>Easy Calendar Event Management</h3>
@@ -119,8 +116,8 @@
               Add and Delete recurring events with 1-click on any cycle/schedule pattern.
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> <b>Cyclone Lives in Google Calendar.</b> A simple interface is accessible from the Google Calendar sidebar. No uploading .ics files, and no scheduling of dozens of individual events.</li>
-              <li><i class="bi bi-check"></i> <b>One-click option for adding and deleting recurring events.</b> A single button creates repeating events through a specified date range.  Deleting connected recurring events is just as easy.</li>
+              <li><i class="bi bi-check"></i> <b>Cyclone Lives in Google Calendar.</b> A simple interface for managing recurring school events is accessible from the Google Calendar sidebar. No uploading .ics files, and no scheduling of dozens of individual events.</li>
+              <li><i class="bi bi-check"></i> <b><a href="learn.html#how_to_add_delete_event">One-click option for adding and deleting recurring events.</a></b> A single button creates repeating events through a specified date range.  Deleting connected recurring events is just as easy.</li>
               <li><i class="bi bi-check"></i> <b>Schedule recurring events for other people.</b> Users can add/delete recurring cycle-based events for any Calendar with edit privileges.</li>
               <li><i class="bi bi-check"></i> <b>No holiday scheduling.</b> Recurring events can be scheduled to repeat every cycle, every other cycle, or on a Mon-Fri schedule that skips holidays or other days with special schedules.</li>
             </ul>
@@ -129,7 +126,7 @@
 
         <div class="row content">
           <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-            <img src="assets/img/Planning.png" class="img-fluid" alt="">
+            <img src="assets/img/Planning.png" class="img-fluid" alt="Easily generate analytics for repeating cycle-based events in Google Calendar">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
             <h3>Convenient Planning with Almanac (Coming Soon)</h3>
@@ -146,7 +143,7 @@
 
         <div class="row content">
           <div class="col-md-5" data-aos="fade-right">
-            <img src="assets/img/Configuration.png" class="img-fluid" alt="">
+            <img src="assets/img/Configuration.png" class="img-fluid" alt="Intuitive, minimal interface for easily scheduling repeating cycle-based events in Google Calendar">
           </div>
           <div class="col-md-7 pt-5" data-aos="fade-left">
             <h3>Simple Configuration.</h3>
@@ -154,8 +151,8 @@
               Set up Cylcone for your Google Workspace with minimal administrative involvement.
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> <b>Easy cycle configuration. </b>Select an existing cycle calendar to provide a pattern for recurring day labels. Or, configure a spreadsheet with a more nuanced, multi-divisional calendar. 6-day, 7-day, 10-day cycles? No problem. </li>
-              <li><i class="bi bi-check"></i> <b>Workspace ready. </b> Google Workspace Admins can quickly deploy Cyclone for all Workspace users.</li>
+              <li><i class="bi bi-check"></i> <b>Easy cycle configuration. </b>Select an existing cycle calendar to provide a pattern for recurring day labels. Or, configure a spreadsheet with a more nuanced, multi-divisional calendar. 6-day cycle calendar scheduling, 7-day cycle calendar scheduling, 10-day cycle calendar scheduling? No problem. </li>
+              <li><i class="bi bi-check"></i> <b>Workspace ready. </b> Google Workspace Admins can quickly deploy Cyclone for all Workspace users. <a href="learn.html#how_to_configure_workspace">Learn how easy it is to configure Cyclone for your Google Workspace!</a></li>
               <li><i class="bi bi-check"></i> <b>Daylight Savings and Time-Zone Aware. </b>  Events are scheduled with an awareness of time-zone specific patterns, including daylight savings.</li>
               <li><i class="bi bi-check"></i> <b>Optimized for speed.</b> User actions are performed quickly because Calendar operations are optimized on the backend to minimize calls to Google's services.</li>
             </ul>
@@ -164,54 +161,7 @@
       </div>
     </section><!-- End Product Features Section -->
 
-    <!-- --- Services Section --- -->
-    <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Tailored EdTech</h2>
-          <p>Cyclone is a TailoredEdTech solution for making it easier to manage bespoke, cycle-based schedules in Google Calendar. If you think we can make Cyclone or Google Workspace work better for your organization, let us know how we can help!</p>
-          <br><a class="contact" href="https://forms.gle/rX1hY4g8x4wnPVuz9">Contact Us!</a><br><br>
-
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Automated Forms, Sheets, and Customized Doc Generation</a></h4>
-              <p class="description">Move and transform data from Forms or Sheets to Docs, GMail, or Drive. Generate customized Docs, Slides, GMail, or .pdf files from Form data, and more!</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Office Hours and Parent Conference Scheduling</a></h4>
-              <p class="description">Quickly generate and schedule available time slots for Dean meetings, office hours, and parent conferences.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Minimester Scheduling</a></h4>
-              <p class="description">Automate Mimimester and Out-of-the-Box course selection and scheduling.</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-layer"></i></div>
-              <h4 class="title"><a href="">Precise and Accurate Test Calendars</a></h4>
-              <p class="description">Display student-specific test schedules on a class-by-class basis directly in Google Calendar.</p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </section><!-- End Services Section -->
+    
 
   </main><!-- End #main -->
 
@@ -222,7 +172,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Tailored EdTech</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span><a href="about.html">Tailored EdTech</a></span></strong>. All Rights Reserved
         </div>
         <div class="terms">
           <a href="https://www.tailorededtech.com/privacy">Privacy Policy</a> | <a
