--- a/learn.html
+++ b/learn.html
@@ -25,33 +25,29 @@
 
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
-      
-      <h1 class="logo">
-        <a href="index.html">      <img src="assets/img/cyclone_64x64.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
-        Cyclone</a>
-      </h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+      <h1 class="logo"><a href="index.html">
+          <img src="assets/img/cyclone_64x64.png" class="img-fluid hero-img" alt="Cyclone Google Calendar Add-on Logo" data-aos="zoom-in" data-aos-delay="150">
+          Cyclone
+        </a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
-          <li><a class="nav-link scrollto" href="index.html#features">Features</a></li>
-          <li><a class="nav-link scrollto" href="learn.html">Learn</a></li>
-          <li><a class="nav-link scrollto" href="index.html#services">Tailored EdTEch</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="nav-link scrollto" href="index.html#features">Cyclone Features</a></li>
+          <li><a class="nav-link scrollto" href="learn.html">How to Use Cyclone</a></li>
+          <li><a class="nav-link scrollto" href="about.html">Tailored EdTech Services</a></li>
+          <li><a class="getstarted scrollto" href="https://forms.gle/rX1hY4g8x4wnPVuz9">Get Cyclone</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-    </div>
-  </header><!-- End Header -->
+      </nav></div>
+  </header>
 
   <main>
 
     <div class="section-title">
       <br> <br> <br> <br> 
       <img src="assets/img/cyclone_64x64.png" class="img-fluid hero-img" alt="" data-aos="zoom-in" data-aos-delay="150">
-      <h2>Cyclone - Learn</h2>
+      <h2>How to Use the Cyclone Google Calendar Workspace Add-On</h2>
       <p> 
         Cyclone can repeat events on any Calendar that gives you edit privileges. <br>
         All settings are preserved for repeated events.</p>
@@ -60,7 +56,7 @@
     <!-- --- Learn Section --- -->
     <section id="faq" class="faq">
       <div class="container" data-aos="fade-up">
-        <h3>Add/Delete a repeating event. </h3>
+        <h3 id="how_to_add_delete_event">Use Cyclone to Add/Delete a Repeating Event on Google Calendar. </h3>
         <ul class="faq-list">
           <li id="repeat_every_cycle_day_tutorial">
             <div data-bs-toggle="collapse" class="collapsed question" href="#repeat_every_cycle_day">Repeat an event every cycle day. <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
@@ -251,7 +247,7 @@
             </div>
           </li>
         </ul>
-        <h3>Generate planners and meeting analytics. </h3>
+        <h3>Use Cyclone: Almanac to generate planners and meeting analytics. </h3>
         <ul class="faq-list">
           <li>
             <div data-bs-toggle="collapse" href="#almanac_stats" class="collapsed question">Generate meeting statistics. <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
@@ -270,7 +266,7 @@
           </div>
         </li>
       </ul>
-        <h3>Configure Cyclone for your Google Workspace. </h3>
+        <h3 id="how_to_configure_workspace">Configure Cyclone for your Google Workspace. </h3>
         <ul class="faq-list">
           <li>
             <div data-bs-toggle="collapse" href="#admin_configure" class="collapsed question">Configure a cycle-based schedule for Cyclone. (Google Workspace Admin) <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
@@ -317,7 +313,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Tailored EdTech</span></strong>. All Rights Reserved.
+          &copy; Copyright <strong><span><a href="about.html">Tailored EdTech</a></span></strong>. All Rights Reserved
         </div>
         <div class="terms">
           <a href="https://www.tailorededtech.com/privacy">Privacy Policy</a> | <a
